# Performance-Prediction-Model-for-Hybrid-Rocket

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: experimental_data.csv
outputs/: validation_summary.csv
outputs/.mplconfig/: fontlist-v390.json
src/hybrid_rocket/: __init__.py  calculations.py  cli.py  constants.py  models.py  plots.py  validation.py
src/hybrid_rocket_performance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_calculations.py
