[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-rocket-performance"
version = "0.1.0"
description = "Simple hybrid rocket performance prediction and validation model for propulsion lab work."
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "matplotlib>=3.10,<4",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
